--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage":"https://varshini1425.github.io/reactReviewApp",
   "name": "review-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "server":"npx json-server db.json",
+    "server": "npx json-server db.json",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -26,6 +29,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
   }
