--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "server": "npx json-server db.json",
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy":"gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
